--- a/src/FormulariosBundle/Resources/config/doctrine/Usuario.orm.yml
+++ b/src/FormulariosBundle/Resources/config/doctrine/Usuario.orm.yml
@@ -49,3 +49,6 @@ FormulariosBundle\Entity\Usuario:
     ultimo_login:
       type: datetime
       nullable: true
+    roles:
+      type: integer
+      nullable: true
