--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -2,23 +2,35 @@
 # http://symfony.com/doc/current/security.html
 security:
 
-    # http://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
-    providers:
-        in_memory:
-            memory: ~
+    encoders:
+        FormulariosBundle\Entity\Usuario:
+            algorithm:        sha1
+            encode_as_base64: false
+            iterations:       1
+
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+
+    providers:  
+        usuario:
+            entity: { class: FormulariosBundle\Entity\Usuario, property: email }
 
     firewalls:
-        # disables authentication for assets and the profiler, adapt it according to your needs
+        default:
+            pattern: ^/
+            anonymous: ~
+            form_login:
+               login_path: login
+               check_path: login_check
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
         main:
-            anonymous: ~
-            # activate different ways to authenticate
+            form_login:
+                target_path_parameter: redirect_url
 
-            # http_basic: ~
-            # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
+    access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN}
 
-            # form_login: ~
-            # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
