--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -7,11 +7,12 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: es
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator: { fallback: es }
+    default_locale: %locale%
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -30,6 +31,8 @@ framework:
         handler_id:  ~
     fragments:       ~
     http_method_override: true
+
+
 
 # Twig Configuration
 twig:
