--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,18 +7,24 @@ security:
             algorithm:        sha1
             encode_as_base64: false
             iterations:       1
-
-    role_hierarchy:
-        ROLE_ADMIN: ROLE_USER
-        ROLE_SUPER_ADMIN: [ ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        Symfony\Component\Security\Core\User\User: plaintext
 
     providers:  
         usuario:
             entity: { class: FormulariosBundle\Entity\Usuario, property: email }
+        in_memory:
+            memory:
+                users:
+                    admin: { password: admin, roles: 'ROLE_ADMIN'}
 
     firewalls:
+        administrador:
+            pattern: ^/admin
+            provider: in_memory
+            http_basic: ~
         default:
             pattern: ^/
+            provider: usuario
             anonymous: ~
             form_login:
                login_path: login
@@ -32,5 +38,5 @@ security:
                 target_path_parameter: redirect_url
 
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN}
+        - { path: ^/admin, roles: ROLE_ADMIN }
 
